samples/_failures_safe/1761222484_fe2b76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16f2aa19.c: In function ‘main’:
./samples/SAFE/__tmp_16f2aa19.c:145:12: error: expected ‘;’ at end of input
  145 |     addEdge
      |            ^
      |            ;
./samples/SAFE/__tmp_16f2aa19.c:145:5: error: expected declaration or statement at end of input
  145 |     addEdge
      |     ^~~~~~~
